--- a/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
@@ -32,7 +32,7 @@
         <p:commandButton value="#{bundle.ActiveUsers}" 
                          icon="ui-icon-extlink"                         
                          actionListener="#{userBean.onActiveUsersFormShow()}">
-            <p:ajax event="dialogReturn" update="#{_frmExpl}"/>
+            <p:ajax event="dialogReturn" update="centerFRM"/>
         </p:commandButton> 
     </ui:define>
 
