--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -98,22 +98,22 @@
     <ui:define name="addMenuActions">
         <p:menuitem icon="ui-icon-mail-closed" value="#{bundle.SendToEmailAsAttache}" title="#{bundle.SendToEmailAsAttache}"
                     disabled="#{_explorerBean.checkedItems.isEmpty()}"
-                    onclick="document.getElementById('#{_frmExpl}:btnSendDocAttache').click();"/>
+                    onclick="document.getElementById('centerFRM:btnSendDocAttache').click();"/>
         <p:menuitem icon="ui-icon-mail-closed" value="#{bundle.SendToEmailAsLink}" title="#{bundle.SendToEmailAsLink}"
                     disabled="#{_explorerBean.checkedItems.isEmpty()}"
-                    onclick="document.getElementById('#{_frmExpl}:btnSendDocLink').click();"/>
+                    onclick="document.getElementById('centerFRM:btnSendDocLink').click();"/>
         <p:separator />
     </ui:define>   
 
     <ui:define name="btnDisplayNone" >
         <p:commandButton id="btnSendDocAttache" actionListener="#{_explorerBean.prepareSendMailDocs('asAttache')}" style="display: none;">
             <p:ajax event="dialogReturn" listener="#{docsBean.onAfterSendDocToEmail}"
-                    update="#{_frmExpl}:messages"
+                    update="centerFRM:messages"
                     oncomplete="initDND()"/>
         </p:commandButton>
         <p:commandButton id="btnSendDocLink" actionListener="#{_explorerBean.prepareSendMailDocs('asLink')}" style="display: none;">
             <p:ajax event="dialogReturn" listener="#{docsBean.onAfterSendDocToEmail}"
-                    update="#{_frmExpl}:messages"
+                    update="centerFRM:messages"
                     oncomplete="initDND()"/>
         </p:commandButton>
     </ui:define>
@@ -147,7 +147,7 @@
                     actionListener="#{_explorerBean.onSetCurrentItem(item)}"
                     disabled="#{item.mainAttache == null}"
                     rendered="#{item.getClass().getSimpleName() == 'Doc'}"
-                    oncomplete="document.getElementById('#{_frmExpl}:editDocument').click();"/>
+                    oncomplete="document.getElementById('centerFRM:editDocument').click();"/>
         <p:menuitem icon="ui-icon-zoomin" value="#{bundle.ViewDoc}" 
                     rendered="#{item.getClass().getSimpleName() == 'Doc'}"
                     disabled="#{item.mainAttache == null}"
@@ -164,11 +164,11 @@
         <p:menuitem icon="ui-icon-clipboard" value="#{bundle.AddVersionFromScan}"
                     rendered="#{item.getClass().getSimpleName() == 'Doc'}"
                     actionListener="#{_explorerBean.onSetCurrentItem(item)}"
-                    oncomplete="document.getElementById('#{_frmExpl}:btnScan').click();"/> 
+                    oncomplete="document.getElementById('centerFRM:btnScan').click();"/> 
         <p:separator />
         <p:menuitem icon="ui-icon-folder-open" value="#{bundle.ShowInFolder}" 
                     rendered="#{item.getClass().getSimpleName() == 'Doc'}" 
-                    update="#{_frmTree} #{_frmExpl}"
+                    update="westFRM centerFRM"
                     actionListener="#{_explorerBean.onShowDocInFolder(item)}"
                     oncomplete="initDND()"/>
     </ui:define>
