--- a/escom-bpm-web/src/main/webapp/view/templ/expl/expl-southpane.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/expl/expl-southpane.xhtml
@@ -5,7 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
     
-    <pe:layoutPane position="south" >
+    <pe:layoutPane id="south" position="south" >
         <h:form style="font-size: 85%;" id="explorer_south">
             <h:panelGrid columns="3" columnClasses="ui-grid-col-4 without-spaces, ui-grid-col-4 without-spaces, ui-grid-col-4 without-spaces" styleClass="ui-grid-col-12 without-spaces">
                 <h:panelGroup>
