--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree-navigator.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree-navigator.xhtml
@@ -8,7 +8,7 @@
             <p:commandButton icon="ui-icon-folder-open" value="#{navigator.name}" title="#{navigator.label}"
                              process="@this" styleClass="btnNavigator"
                              actionListener="#{_explorerBean.navigationSetSelected(navigator)}"
-                             update="#{_frmTree} #{_frmExpl} centerHeaderLabel #{_updates}"
+                             update="westFRM centerFRM centerHeaderLabel #{_updates}"
                              oncomplete="initDND()" 
                              style="font-size: 90%;">                  
             </p:commandButton>
