--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
@@ -4,7 +4,7 @@
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
     
-    <p:defaultCommand target="#{_frmTree}:accord:btnTreeSearche" />
+    <p:defaultCommand target="westFRM:accord:btnTreeSearche" />
     
     <p:toolbar id="toolbarTree" styleClass="ui-grid-col-12">
         <p:toolbarGroup styleClass="ui-grid-col-12" rendered="#{_explorerBean.tree != null}">
@@ -12,18 +12,18 @@
                     <p:commandButton icon="ui-icon-refresh" title="#{bundle.Refresh}"
                                      style="font-size: 90%;"
                                      actionListener="#{_explorerBean.onReloadTreeItems()}"
-                                     update="#{_frmTree} #{_frmExpl}"
+                                     update="westFRM centerFRM"
                                      onstart="PF('statusDialog').show()"
                                      oncomplete="PF('statusDialog').hide(); initDND()"/>
                     <span class="ui-separator">
                         <span class="ui-icon ui-icon-grip-dotted-vertical" />
                     </span>
                     <p:commandButton icon="ui-icon-folder-open" title="#{bundle.ExpandTree}"
-                                     update="#{_frmTree}" oncomplete="initDND()"
+                                     update="westFRM" oncomplete="initDND()"
                                      style="font-size: 90%;"
                                      actionListener="#{_explorerBean.onExpandTree()}"/>
                     <p:commandButton icon="ui-icon-folder-collapsed" title="#{bundle.CollapseTree}"
-                                     update="#{_frmTree}" oncomplete="initDND()"
+                                     update="westFRM" oncomplete="initDND()"
                                      style="font-size: 90%;"
                                      actionListener="#{_explorerBean.onCollapseTree()}"/>
                     <span class="ui-separator">
@@ -34,7 +34,7 @@
                                      disabled="#{_explorerBean.isCanCopyTreeItem()}"
                                      onstart="PF('statusDialog').show()"
                                      oncomplete="PF('statusDialog').hide(); initDND()"
-                                     update="#{_frmTree}:accord:toolbarTree"
+                                     update="westFRM:accord:toolbarTree"
                                      actionListener="#{_explorerBean.onCopySelectedTreeItem()}"/>
 
                     <p:commandButton icon="ui-icon-clipboard" title="#{bundle.Paste}"
@@ -43,7 +43,7 @@
                                      onstart="PF('statusDialog').show()"
                                      oncomplete="PF('statusDialog').hide(); initDND()"
                                      actionListener="#{_explorerBean.onPasteItemToTree()}"
-                                     update="#{_frmTree}:accord:tree #{_frmExpl}"/>
+                                     update="westFRM:accord:tree centerFRM"/>
                     <span class="ui-separator">
                         <span class="ui-icon ui-icon-grip-dotted-vertical" />
                     </span>
@@ -53,7 +53,7 @@
                                      style="font-size: 90%;"
                                      onstart="PF('statusDialog').show()"
                                      oncomplete="PF('statusDialog').hide(); initDND();"
-                                     update="#{_frmTree}:accord:tree #{_frmTree}:accord:toolbarTree #{_frmExpl} centerHeaderLabel #{_updates}"
+                                     update="westFRM:accord:tree westFRM:accord:toolbarTree centerFRM centerHeaderLabel #{_updates}"
                                      actionListener="#{_explorerBean.onMoveTreeItemToTrash()}">
                         <p:confirm header="#{bundle.ConfirmDelete}" message="#{bundle.AreYouSure}" icon="ui-icon-alert" />
                     </p:commandButton>
@@ -64,7 +64,7 @@
                     </p:inputText>
                     <p:commandButton id="btnTreeSearche" title="#{bundle.Searche}" icon="ui-icon-search"
                                      disabled="#{!_explorerBean.isShowTree()}"
-                                     update="#{_frmTree} centerHeaderLabel #{_frmExpl} #{_updates}"
+                                     update="westFRM centerHeaderLabel centerFRM #{_updates}"
                                      actionListener="#{_explorerBean.onSearcheInTree()}" style="font-size: 90%;" 
                                      oncomplete="initDND()">
                     </p:commandButton>
@@ -76,9 +76,9 @@
     <p:splitButton value="#{bundle.Actions}" icon="ui-icon-gear"
                     rendered="#{false}">
         <p:menuitem icon="ui-icon-plus" value="#{bundle.CreateChildGroup}"                            
-                    oncomplete="document.getElementById('#{_frmTree}:createTreeCardBtn').click();"/>                
+                    oncomplete="document.getElementById('westFRM:createTreeCardBtn').click();"/>                
         <p:menuitem icon="ui-icon-plus" value="#{bundle.CreateInNullLevel}"
-                    oncomplete="document.getElementById('#{_frmTree}:createRootTreeCardBtn').click();"/>
+                    oncomplete="document.getElementById('westFRM:createRootTreeCardBtn').click();"/>
     </p:splitButton>    
 
 </ui:composition>
